--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Running tests...\" && jest --detectOpenHandles --verbose --coverage",
-    "cli": "ts-node cli.ts"
+    "cli": "ts-node cli.ts",
     "lint": "eslint ."
   },
   "keywords": [],
