--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Running tests...\" && jest --detectOpenHandles --verbose --coverage",
+    "build": "tsc",
     "cli": "ts-node cli.ts",
     "lint": "eslint ."
   },
@@ -16,27 +17,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^22.5.5",
     "@types/sinon": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "eslint": "^9.13.0",
     "jest": "^29.7.0",
     "memfs": "^4.12.0",
     "ts-jest": "^29.2.5",
-    "tsx": "^4.19.0"
+    "tsx": "^4.19.0",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5",
-    "eslint": "^9.10.0",
     "exec": "^0.2.1",
     "fs": "^0.0.1-security",
     "isomorphic-git": "^1.27.1",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "tslog": "^4.9.3",
-    "typescript": "^5.5.4"
+    "tslog": "^4.9.3"
   }
 }
