added changes to .yaml github workflow Deploy to EC2 still doesn't work

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  build:    # First job name
     runs-on: ubuntu-latest
 
     steps:
@@ -17,22 +17,43 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Install dependencies (if you are using Node.js as an example)
+      # Add Node.js setup
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20.x'  # Specify Node.js version
+        cache: 'npm'    # Enables npm caching
+
+    # Install dependencies 
     - name: Install dependencies
       run: npm install
 
     # Run linting
-    - name: Run lint
+    - name: Run lint #need to install eslint dependency for this to run
       run: npm run lint
 
     # Run tests
     - name: Run tests
       run: npm test
 
-    # Deploy to EC2
-    - name: Deploy to EC2
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  deploy:    
+    needs: build    
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' # Only deploy when the branch is main
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Configure AWS credentials    
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Deploy to EC2 # need to fix this doesn't work properly
       run: |
-        ssh -o StrictHostKeyChecking=no ec2-user@3.208.173.73 'bash -s' < ./deploy/deploy.sh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > deploy_key
+        chmod 600 deploy_key
+        ssh -i deploy_key -o StrictHostKeyChecking=no ec2-user@3.208.173.73 'bash -s' < ./deploy/deploy.sh 
