--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -15,13 +15,13 @@ jobs:
     steps:
     # Checkout the repository
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
       # Add Node.js setup
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '20.x'  # Specify Node.js version
+        node-version: '20.x'  
         cache: 'npm'    # Enables npm caching
 
     # Install dependencies 
@@ -36,24 +36,24 @@ jobs:
     - name: Run tests
       run: npm test
 
-  deploy:    
-    needs: build    
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' # Only deploy when the branch is main
+  # deploy:    
+  #   needs: build    
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/main' # Only deploy when the branch is main
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
 
-    - name: Configure AWS credentials    
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+  #   - name: Configure AWS credentials    
+  #     uses: aws-actions/configure-aws-credentials@v1
+  #     with:
+  #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #       aws-region: us-east-1
 
-    - name: Deploy to EC2 # need to fix this doesn't work properly
-      run: |
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > deploy_key
-        chmod 600 deploy_key
-        ssh -i deploy_key -o StrictHostKeyChecking=no ec2-user@3.208.173.73 'bash -s' < ./deploy/deploy.sh 
+  #   - name: Deploy to EC2 # need to fix this doesn't work properly
+  #     run: |
+  #       echo "${{ secrets.SSH_PRIVATE_KEY }}" > deploy_key
+  #       chmod 600 deploy_key
+  #       ssh -i deploy_key -o StrictHostKeyChecking=no ec2-user@3.208.173.73 'bash -s' < ./deploy/deploy.sh 
