--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -88,7 +88,7 @@ jobs:
     - name: Deploy to EC2
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        EC2_USERNAME: apienkow
+        EC2_USERNAME: schancha
         EC2_HOST: "3.208.173.73"  # Hardcoded IP for school project
       run: |
         # Create SSH directory and key file
