--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -9,46 +9,34 @@ on:
       - main
   workflow_dispatch:
 
-
 jobs:
-  build:    # First job name
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v3
 
-      # Add Node.js setup
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '20.x'  # Specify Node.js version
-        cache: 'npm'    # Enables npm caching
+        node-version: '20.x'
+        cache: 'npm'
 
-    # Install dependencies 
     - name: Install dependencies
       run: npm install
 
-    # Run linting (*linting needs to be fixed not working properly)
-    # - name: Run lint #need to install eslint dependency for this to run
-    #   run: npm run lint
     - name: Create log directory
       run: |
         touch jest-output.log 
       
-    # Set environment variables
     - name: Set environment variables
-      # env:
-      # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} potentiall use later test token for now
       run: |
         echo "LOG_FILE=jest-output.log" >> $GITHUB_ENV
         echo "LOG_LEVEL=0" >> $GITHUB_ENV
         echo "GITHUB_TOKEN=TESTaxad" >> $GITHUB_ENV 
-        
-        # Create log file directory
         touch jest-output.log
-    # Run tests
+
     - name: Run tests
       run: npm test
     
@@ -57,7 +45,6 @@ jobs:
 
   deploy:
     needs: build
-    # if: github.ref == 'refs/heads/main' # Only deploy on main branch
     runs-on: ubuntu-latest
 
     steps:
@@ -97,23 +84,28 @@ jobs:
         # Add EC2 host to known hosts
         ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
 
+        # Create app directory
         ssh -i ~/.ssh/deploy_key $EC2_USERNAME@$EC2_HOST "mkdir -p ~/app"
 
-        # Make deploy.sh executable before copying
+        # Make deploy.sh executable
         chmod +x deploy/deploy.sh
         
-        # Copy files to EC2 (note the updated path to deploy.sh)
+        # Copy files to EC2
         scp -i ~/.ssh/deploy_key -r \
           dist \
           run \
+          src \
           package.json \
           package-lock.json \
           deploy/deploy.sh \
+          src/process.config.js \
           $EC2_USERNAME@$EC2_HOST:~/app/
         
-        # # Execute deployment
-        # ssh -i ~/.ssh/deploy_key $EC2_USERNAME@$EC2_HOST "
-        #   cd ~/app && \
-        #   chmod +x deploy.sh && \
-        #   ./deploy.sh"
-          
+        # Execute deployment and start server
+        ssh -i ~/.ssh/deploy_key $EC2_USERNAME@$EC2_HOST "
+          cd ~/app && \
+          chmod +x run && \
+          npm install && \
+          npm install -g pm2 && \
+          ./run stop || true && \
+          ./run serve"
