--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/express": "^5.0.0",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5",
     "exec": "^0.2.1",
+    "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "isomorphic-git": "^1.27.1",
     "prettier": "^3.3.3",
