--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@jest/globals": "^29.7.0",
+    "@types/aws-sdk": "^0.0.42",
     "@types/jest": "^29.5.12",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^22.5.5",
