--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@jest/globals": "^29.7.0",
-    "@types/aws-sdk": "^0.0.42",
     "@types/jest": "^29.5.12",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^22.5.5",
@@ -34,8 +33,10 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.x",
+    "@aws-sdk/lib-dynamodb": "^3.x",
+    "@smithy/node-http-handler": "^3.2.5",
     "@types/express": "^5.0.0",
-    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5",
