--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -7,23 +7,19 @@ on:
     branches:
       - main
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '20.x'
         cache: 'npm'
-
     - name: Install dependencies
       run: npm install
-
     - name: Create log directory
       run: touch jest-output.log 
       
@@ -33,13 +29,11 @@ jobs:
         echo "LOG_LEVEL=0" >> $GITHUB_ENV
         echo "GITHUB_TOKEN=TESTaxad" >> $GITHUB_ENV 
         touch jest-output.log
-
     - name: Run tests
       run: npm test
     
     - name: Build
       run: npm run build
-
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
@@ -51,7 +45,6 @@ jobs:
           package-lock.json
           src
           run
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -60,22 +53,23 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: build-artifacts
-
     - name: Create .env file
       run: |
         cat << EOF > .env
+        AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION=us-east-1
+        DYNAMODB_TABLE=packages
         LOG_FILE=jest-output.log 
         LOG_LEVEL=0
-        GITHUB_TOKEN=TESTaxad
+        GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
         EOF
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: "us-east-1"
-
     - name: Deploy to EC2
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -87,6 +81,7 @@ jobs:
         chmod 600 ~/.ssh/deploy_key
         ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
         
+        # Copy files to EC2
         scp -i ~/.ssh/deploy_key -r \
           dist \
           run \
@@ -97,7 +92,9 @@ jobs:
           .env \
           $EC2_USERNAME@$EC2_HOST:~/app/
         
+        # Execute deploy script with environment sourced
         ssh -i ~/.ssh/deploy_key $EC2_USERNAME@$EC2_HOST "
           cd ~/app && \
           chmod +x deploy.sh && \
+          source .env && \
           ./deploy.sh"
