--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -53,8 +53,9 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: build-artifacts
-    - name: Create .env file
+    - name: Create .env file and log file
       run: |
+        touch jest-output.log
         cat << EOF > .env
         AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
