--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ece-461-project-repo",
   "version": "1.0.0",
   "description": "## This is a ECE461 Team Project Repository",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -11,12 +11,14 @@
     "test": "echo \"Running tests...\" && jest --detectOpenHandles --verbose --coverage",
     "build": "tsc",
     "cli": "ts-node cli.ts",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "setup": "ts-node src/scripts/setup-local.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@aws-sdk/credential-providers": "^3.696.0",
     "@eslint/js": "^9.13.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
@@ -28,6 +30,7 @@
     "eslint": "^9.13.0",
     "jest": "^29.7.0",
     "memfs": "^4.12.0",
+    "nodemon": "^3.1.7",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3"
@@ -37,6 +40,7 @@
     "@aws-sdk/lib-dynamodb": "^3.x",
     "@smithy/node-http-handler": "^3.2.5",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5",
@@ -44,6 +48,7 @@
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "isomorphic-git": "^1.27.1",
+    "jsonwebtoken": "^9.0.2",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tslog": "^4.9.3"
