--- a/package.json
+++ b/package.json
@@ -21,16 +21,22 @@
     "@aws-sdk/credential-providers": "^3.696.0",
     "@eslint/js": "^9.13.0",
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.12",
+    "@types/chai": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^22.5.5",
     "@types/sinon": "^17.0.3",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
+    "chai": "^5.1.2",
     "eslint": "^9.13.0",
     "jest": "^29.7.0",
     "memfs": "^4.12.0",
+    "mocha": "^10.8.2",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3"
