--- a/back-end/package.json
+++ b/back-end/package.json
@@ -45,10 +45,12 @@
     "@aws-sdk/client-dynamodb": "^3.x",
     "@aws-sdk/lib-dynamodb": "^3.x",
     "@smithy/node-http-handler": "^3.2.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "exec": "^0.2.1",
     "express": "^4.21.1",
