refactored upload to follow open api schema added error checks for uploading the same package, invalid url, invalid zip, and authentication failed.

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -46,9 +46,11 @@
     "@aws-sdk/lib-dynamodb": "^3.x",
     "@smithy/middleware-retry": "^3.0.28",
     "@smithy/node-http-handler": "^3.2.5",
+    "@types/adm-zip": "^0.5.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "adm-zip": "^0.5.16",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
