--- a/back-end/package.json
+++ b/back-end/package.json
@@ -43,7 +43,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.x",
+    "@aws-sdk/client-s3": "^3.703.0",
     "@aws-sdk/lib-dynamodb": "^3.x",
+    "@aws-sdk/s3-request-presigner": "^3.703.0",
     "@smithy/middleware-retry": "^3.0.28",
     "@smithy/node-http-handler": "^3.2.5",
     "@types/adm-zip": "^0.5.7",
