--- a/back-end/package.json
+++ b/back-end/package.json
@@ -51,6 +51,7 @@
     "@types/adm-zip": "^0.5.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/glob": "^8.1.0",
     "@types/jsonwebtoken": "^9.0.7",
     "adm-zip": "^0.5.16",
     "axios": "^1.7.7",
@@ -60,6 +61,7 @@
     "exec": "^0.2.1",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
+    "glob": "^10.4.5",
     "isomorphic-git": "^1.27.1",
     "jsonwebtoken": "^9.0.2",
     "prettier": "^3.3.3",
