--- a/back-end/package.json
+++ b/back-end/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
+    "ts-mockito": "^2.6.1",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3"
   },
