niki and ary changes

--- a/back-end/.env.test
+++ b/back-end/.env.test
@@ -2,3 +2,5 @@ LOG_FILE=./test.log
 LOG_LEVEL=0
 AWS_REGION=us-east-1
 GITHUB_TOKEN=test-token
+AWS_ACCESS_KEY_ID=AKIAS252WMQSHIZKQH3R
+AWS_SECRET_ACCESS_KEY=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
