--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,6 +26,7 @@
     "@types/mocha": "^10.0.10",
     "@types/mock-fs": "^4.13.4",
     "@types/node": "^22.5.5",
+    "@types/semver": "^7.5.8",
     "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
@@ -36,8 +37,10 @@
     "memfs": "^4.12.0",
     "mocha": "^10.8.2",
     "nodemon": "^3.1.7",
+    "semver": "^7.6.3",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
+    "ts-mockito": "^2.6.1",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3"
   },
