--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -6,16 +6,16 @@
       "module": "ESNext",
       "skipLibCheck": true,
       "moduleResolution": "bundler",
-      "allowImportingTsExtensions": true,
       "resolveJsonModule": true,
       "isolatedModules": true,
       "noEmit": true,
       "jsx": "react-jsx",
       "strict": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
       "noFallthroughCasesInSwitch": true,
       "baseUrl": ".",
+      "esModuleInterop": true,
       "paths": {
         "@/*": ["./src/*"],
         "@/components/*": ["./src/components/*"],
